--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.7", features = ["derive"] }
 itertools = "0.12.0"
+lazy_static = "1.4.0"
 md5 = "0.7.0"
 pretty_assertions = "1.4.0"
 regex = "1.10.2"
