--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.7", features = ["derive"] }
+colored = "2.1.0"
 itertools = "0.12.0"
 lazy_static = "1.4.0"
 md5 = "0.7.0"
